# vibeMK

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  claude.md  main.py  openapi-swagger-ui.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: __init__.py  client.py  exceptions.py
checkmk_types/: __init__.py  checkmk_types.py  mcp_types.py
config/: __init__.py  settings.py
examples/: ExamplePrompts.md  README.md  logging_debug_guide.md  screenshots.md
examples/llm_configs/: advanced_config.json  basic_config.json  claude_desktop_config_with_logging.json  localhost_config.json
handlers/: __init__.py  acknowledgements.py  base.py  configuration.py  connection.py  debug.py  discovery.py  downtimes.py  folders.py  groups.py  host_group_rules.py  hosts.py  metrics.py  monitoring.py  passwords.py  rules.py  rulesets.py  service_groups.py  services.py  tags.py  timeperiods.py  user_roles.py  users.py
mcp/: __init__.py  server.py  tools.py
scripts/: format-check.sh
tests/: README.md  __init__.py  conftest.py  test_api_client.py  test_config.py  test_handlers_hosts.py  test_integration.py  test_mcp_server.py
utils/: __init__.py  logging.py
