[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibemk"
version = "0.3.2"
description = "vibeMK - CheckMK monitoring via LLM - MCP Server"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Andre", email = "chexma@gmx.de"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
keywords = ["checkmk", "monitoring", "mcp", "claude", "automation"]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/chexma/vibeMK"
Documentation = "https://github.com/chexma/vibeMK/blob/main/README.md"
Repository = "https://github.com/chexma/vibeMK"
Issues = "https://github.com/chexma/vibeMK/issues"

[project.scripts]
vibemk = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "coverage>=7.0.0"
]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.ruff]
line-length = 120
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
